--- a/sixagen/sixagen/Web.config
+++ b/sixagen/sixagen/Web.config
@@ -17,9 +17,6 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
-    <authentication mode="Forms">
-      <forms loginUrl="Cuenta/Login"></forms>
-    </authentication>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -60,9 +57,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="SixagenEntities" connectionString="metadata=res://*/Models.Sixagen.csdl|res://*/Models.Sixagen.ssdl|res://*/Models.Sixagen.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-QTH7DIP\SQLEXPRESS02;initial catalog=Sixagen;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-      providerName="System.Data.EntityClient" />
-    <add name="sixagen.Properties.Settings.ConexionMarcos" connectionString="Data Source=DESKTOP-8S1TP0J;Initial Catalog=Sixagen;Integrated Security=True" />
+    <add name="SixagenEntities" connectionString="metadata=res://*/Models.Sixagen.csdl|res://*/Models.Sixagen.ssdl|res://*/Models.Sixagen.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-QTH7DIP\SQLEXPRESS02;initial catalog=Sixagen;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
